# Lindenmeyer-System-CUDA

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
docs/: WRITEUP.md  cite.bib  proposal.tex
scripts/: ncu.sh
src/: add_kernel.cu  add_kernel.h  bench.cpp  examples.cpp  examples.h  image.cpp  image.h  lsystem.cpp  lsystem.h  lsystem_cuda.cu  lsystem_cuda.h  main.cpp  playground.cpp  render_demo.cpp  transform_cuda.cu  transform_cuda.h  turtle.cpp  turtle.h
src/app/: bench.cpp  camera.h  playground.cpp  profile.cpp  render_demo.cpp  renderer.cpp  renderer.h
src/core/: lsystem_types.h  quat.h  turtle_commands.h  turtle_types.h
src/cpu/: examples.cpp  examples.h  expand.cpp  expand.h  image.cpp  image.h  interpret.cpp  interpret.h  lsystem.cpp  turtle.cpp
src/gpu/: bracket_resolve.cu  cuda_check.h  device_buffer.h  expand.cu  gl_interop.cu  gl_interop.h  interpret.cu  interpret.h  kernel.h  lsystem_gpu.cu  lsystem_gpu.h  nvtx.h  pool.cu  transform_gpu.cu  transform_gpu.h  turtle_engine.h
tests/: check.h  test_add.cpp  test_expand.cpp  test_interpret.cpp  test_lsystem.cpp  test_lsystem_cuda.cpp  test_transform_cuda.cpp
